--- a/src/main/java/com/patient/qa/config/config.properties
+++ b/src/main/java/com/patient/qa/config/config.properties
@@ -2,3 +2,4 @@ baseURL=https://pat.libreview.io/
 browser=chrome
 country=US,FR
 language=en,fr
+URL=https://datausa.io/api/data?drilldowns=Nation&measures=Population
